--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10")
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.0-rc02' apply false
     id 'com.android.library' version '7.2.0-rc02' apply false
