--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,14 +64,17 @@ dependencies {
     // Scanner QR code
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
-    //Hilt
+    // Hilt
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 
-    //Retrofit
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+
+    // DataStore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 
 }
