--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     def retrofitVersion = "2.9.0"
+    def mockitoKotlinVersion = "4.5.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -50,6 +51,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'io.mockk:mockk:1.12.4'
+    androidTestImplementation 'io.mockk:mockk-android:1.11.0'
+    testImplementation 'io.mockk:mockk-agent-jvm:1.11.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     // Navigation Components
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
